force-app/main/default/objects/Royalty_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received from Reseller</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Oracle_Acct_Number__c</fullName>
        <formula>Reseller__r.Oracle_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Acct Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Royalty_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reseller__c</fullName>
        <label>Reseller</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Royalty Payments</relationshipLabel>
        <relationshipName>Royalty_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Royalty_Amount__c</fullName>
        <label>Royalty Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Ship_and_Bill</fullName>
                    <label>Ship &amp; Bill</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Royalty Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reseller__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Royalty_Amount__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Approved__c</columns>
        <columns>Notes__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Royalty Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Royalty Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>