force-app/main/default/objects/Royalty_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reseller__c</columns>
    <columns>Date_Received__c</columns>
    <columns>Royalty_Amount__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Approved__c</columns>
    <columns>Notes__c</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>